Add company logo to index.html and update dependencies

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>N.W.A.-Solutions</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <img src="N.W.A..jpg" alt="Logo de la empresa" />
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
