Remove company logo from index.html and clean up markup

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>N.W.A.-Solutions</title>
   </head>
   <body>
-    <div id="root">
-      <img src="N.W.A..jpg" alt="Logo de la empresa" />
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
